// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`new OPromise() observes fulfillment 1`] = `
Array [
  Array [
    Object {
      "error": undefined,
      "resolved": true,
      "result": "test",
    },
  ],
]
`;

exports[`new OPromise() observes rejection 1`] = `
Array [
  Array [
    Object {
      "error": "test",
      "resolved": true,
      "result": undefined,
    },
  ],
]
`;
